Fix form input/select height on firefox

--- a/web/css/forms.css
+++ b/web/css/forms.css
@@ -16,6 +16,7 @@ input {
     font-size: 14px;
     box-sizing: border-box;
     width: 100%;
+    height: 2.75rem;
     margin-bottom: 10px;
     padding: 10px;
     border: 0;
@@ -91,6 +92,7 @@ div.login-transbox p {
 
 select {
     font-size: 14px;
+    height: 2.75rem;
     width: 100%;
     margin: 0 0 10px;
     padding: 9px 10px 9px 10px; /* For some reason these are 2px taller */
